course list update
