# internal/router/router.go
@@ -8,7 +8,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func NewRouter(smsHandler *handler.SmsHandler) *gin.Engine {
+func NewRouter(smsHandler *handler.SmsHandler, courseHandler *handler.CourseHandler) *gin.Engine {
 	r := gin.Default()
 
 	r.Use(corsMiddleware())
@@ -21,6 +21,11 @@ func NewRouter(smsHandler *handler.SmsHandler) *gin.Engine {
 		sms := api.Group("/sms")
 		{
 			sms.POST("/notify", smsHandler.Notify)
+		}
+
+		course := api.Group("/course")
+		{
+			course.GET("/total", courseHandler.TotalCourse)
 		}
 	}
 
